tests/files/parser_tests/should_fail/125.cmdr
//Should not parse
x: (int -> float = (a) -> 3.0;